Table resume {
    id           int       [pk, increment]
    resume_id    varchar(32) [not null, unique]
    last_login   datetime   [not null]
    name         varchar(8) [not null]
    status       enum
    information  text
    phone        varchar(11)
    email        varchar(100) [not null, unique]
    education    text
    certificate  text
    language     text
    skills       text
    description  text
}

Table job {
    id           int       [pk, increment]
    company_name varchar(255) [not null]
    title        varchar(20) [not null]
    location     varchar(8)
    requirements text
    description  text       [not null]
}

Table chat_log {
    id          int         [pk, increment]
    resume_id   int         [not null, ref: > resume.id]
    job_id      int         [not null, ref: > job.id]
    sender      enum        [not null] // enum: 'candidate' or 'hr'
    content     text        [not null]
    timestamp   datetime    [not null]
}

Table score {
    id             int     [pk, increment]
    resume_id      int     [not null, ref: > resume.id]
    job_id         int     [not null, ref: > job.id]
    initial_score  float
    final_score    float
    status         enum
    updated_at     datetime [not null]

Indexes {
        (resume_id, job_id) [unique]
    }
}

Table work_experience {
    id             int     [pk, increment]
    resume_id      int     [not null, ref: > resume.id]
    company_name   varchar(255) [not null]
    job_title      varchar(255) [not null]
    start_date     date    [not null]
    end_date       date
    description    text
}

Table project_experience {
    id             int     [pk, increment]
    resume_id      int     [not null, ref: > resume.id]
    project_name   varchar(255) [not null]
    role           varchar(100)
    start_date     date    [not null]
    end_date       date
    description    text
}

Table scraper_task {
    id             int     [pk, increment]
    
}